--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -26,9 +26,7 @@
           <div class="item">
             <img src="/api/image?image=boomerang.svg" alt="Boomerang Logo" />
             <p class="two">
-              BONIFICACIÓN POR<br />NUEVO CLIENTE<br /><span
-                >100% HASTA 200€</span
-              >
+              BONIFICACIÓN POR<br />NUEVO CLIENTE<br /><span>100% HASTA 200€</span>
             </p>
             <div class="rating_pc">
               <div class="stars">
@@ -40,9 +38,7 @@
               </div>
               <p>10.0<span style="font-size: 16px">/10</span></p>
             </div>
-            <a href="https://boomerang-bet616356.com/de/" class="btn"
-              >BONO COLECCIÓN</a
-            >
+            <a href="https://boomerang-bet616356.com/de/" class="btn">BONO COLECCIÓN</a>
           </div>
         </div>
       </div>
@@ -51,11 +47,7 @@
     <header>
       <div class="container">
         <a href="/" class="logo">
-          <img
-            style="width: 170px"
-            src="/api/image?image=logotype.svg"
-            alt="Logo"
-          />
+          <img style="width: 170px" src="/api/image?image=logotype.svg" alt="Logo" />
         </a>
       </div>
     </header>
@@ -75,27 +67,15 @@
           </p>
           <div class="items">
             <div class="item">
-              <img
-                class="img-icon"
-                src="/api/image?image=Group%201.svg"
-                alt=""
-              />
+              <img class="img-icon" src="/api/image?image=Group%201.svg" alt="" />
               <span>Seguro & Fiable</span>
             </div>
             <div class="item">
-              <img
-                class="img-icon"
-                src="/api/image?image=Group%202.svg"
-                alt=""
-              />
+              <img class="img-icon" src="/api/image?image=Group%202.svg" alt="" />
               <span>Retiradas Rápidas</span>
             </div>
             <div class="item">
-              <img
-                class="img-icon"
-                src="/api/image?image=Group%203.svg"
-                alt=""
-              />
+              <img class="img-icon" src="/api/image?image=Group%203.svg" alt="" />
               <span>Bonos Elevados</span>
             </div>
           </div>
@@ -139,28 +119,14 @@
           <div class="line">Visitar el Sitio</div>
         </div>
 
-        <!-- Repeat this .item block for each bookmaker -->
+        <!-- Карточки букмекерів -->
         <div class="items">
           <div class="item">
             <div class="label-hot">#1 MEJOR CASA DE APUESTAS</div>
             <div class="table">
-              <div class="tr">
-                <img
-                  class="logo_img"
-                  src="/api/image?image=boomerang.svg"
-                  alt="Boomerang"
-                />
-              </div>
-              <div class="tr">
-                <p class="two">
-                  BONIFICACIÓN NUEVO CLIENTE<br /><span>200€</span>
-                </p>
-              </div>
-              <div class="tr">
-                <div class="rating_pc">
-                  <p>10.0</p>
-                </div>
-              </div>
+              <div class="tr"><img class="logo_img" src="/api/image?image=boomerang.svg" alt="Boomerang" /></div>
+              <div class="tr"><p class="two">BONIFICACIÓN NUEVO CLIENTE<br /><span>200€</span></p></div>
+              <div class="tr"><div class="rating_pc"><p>10.0</p></div></div>
               <div class="tr">
                 <div class="rating_pc">
                   <div class="stars">
@@ -174,14 +140,110 @@
                 </div>
               </div>
               <div class="tr">
-                <a href="https://boomerang-bet616356.com/de/" class="btnactive"
-                  >BONO COLECCIÓN</a
-                >
+                <a href="https://boomerang-bet616356.com/de/" class="btnactive">BONO COLECCIÓN</a>
                 <p class="btn_btext">Visitar el Sitio Web</p>
               </div>
             </div>
           </div>
-          <!-- More .item blocks here for other bookmakers -->
+
+          <div class="item">
+            <div class="label-hot">#2 SELECCIÓN DE JUGADORES</div>
+            <div class="table">
+              <div class="tr"><img class="logo_img" src="/api/image?image=billybets.png" alt="BillyBets" /></div>
+              <div class="tr"><p class="two">BONIFICACIÓN NUEVO CLIENTE<br /><span>200€</span></p></div>
+              <div class="tr"><div class="rating_pc"><p>9.9</p></div></div>
+              <div class="tr">
+                <div class="rating_pc">
+                  <div class="stars">
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                  </div>
+                  <div class="votes">Votos (13,125)</div>
+                </div>
+              </div>
+              <div class="tr">
+                <a href="https://billybets2.com/" class="btnactive">BONO COLECCIÓN</a>
+                <p class="btn_btext">Visitar el Sitio Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="label-hot">#3 TENDENCIAS</div>
+            <div class="table">
+              <div class="tr"><img class="logo_img" src="/api/image?image=mrpacho.svg" alt="MrPacho" /></div>
+              <div class="tr"><p class="two">BONIFICACIÓN NUEVO CLIENTE<br /><span>200€</span></p></div>
+              <div class="tr"><div class="rating_pc"><p>9.8</p></div></div>
+              <div class="tr">
+                <div class="rating_pc">
+                  <div class="stars">
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                  </div>
+                  <div class="votes">Votos (12,767)</div>
+                </div>
+              </div>
+              <div class="tr">
+                <a href="https://mrpacho834643.com/" class="btnactive">BONO COLECCIÓN</a>
+                <p class="btn_btext">Visitar el Sitio Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="table">
+              <div class="tr"><img class="logo_img" src="/api/image?image=batibet.png" alt="BetiBet" /></div>
+              <div class="tr"><p class="two">BONIFICACIÓN NUEVO CLIENTE<br /><span>200€</span></p></div>
+              <div class="tr"><div class="rating_pc"><p>9.7</p></div></div>
+              <div class="tr">
+                <div class="rating_pc">
+                  <div class="stars">
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                  </div>
+                  <div class="votes">Votos (10,325)</div>
+                </div>
+              </div>
+              <div class="tr">
+                <a href="https://www.betibet.com/" class="btnactive">BONO COLECCIÓN</a>
+                <p class="btn_btext">Visitar el Sitio Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="table">
+              <div class="tr"><img class="logo_img" src="/api/image?image=rtbet.png" alt="RTBet" /></div>
+              <div class="tr"><p class="two">BONIFICACIÓN NUEVO CLIENTE<br /><span>200€</span></p></div>
+              <div class="tr"><div class="rating_pc"><p>9.6</p></div></div>
+              <div class="tr">
+                <div class="rating_pc">
+                  <div class="stars">
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                    <img src="/api/image?image=star_icon.svg" alt="" />
+                  </div>
+                  <div class="votes">Votos (8,879)</div>
+                </div>
+              </div>
+              <div class="tr">
+                <a href="https://rtbet8.com/" class="btnactive">BONO COLECCIÓN</a>
+                <p class="btn_btext">Visitar el Sitio Web</p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -189,15 +251,10 @@
     <footer>
       <div class="container">
         <a href="/" class="logo">
-          <img
-            style="width: 170px"
-            src="/api/image?image=logotype_footer.svg"
-            alt="Logo"
-          />
+          <img style="width: 170px" src="/api/image?image=logotype_footer.svg" alt="Logo" />
         </a>
         <div class="items">
-          ¡Importante! Todos los juegos presentados en los sitios están
-          disponibles solo para mayores de 18 años.
+          ¡Importante! Todos los juegos presentados en los sitios están disponibles solo para mayores de 18 años.
         </div>
       </div>
     </footer>
@@ -212,10 +269,7 @@
         );
       });
     </script>
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
     <script src="/api/js?file=site.js"></script>
   </body>
 </html>
