--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -29,21 +29,22 @@
       }
       .modal .content {
         background: #fff;
-        border-radius: 10px;
+        border-radius: 12px;
         width: 100%;
-        max-width: 460px;
+        max-width: 520px;
         position: relative;
         text-align: center;
         overflow: hidden;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
       }
       .modal .close {
         position: absolute;
-        top: 15px;
-        right: 15px;
+        top: 10px;
+        right: 10px;
         border: none;
         background: none;
         font-size: 24px;
-        color: #fff;
+        color: #333;
         cursor: pointer;
         z-index: 10;
       }
@@ -51,28 +52,30 @@
         background: #1e57a6;
         color: #fff;
         font-weight: 700;
-        padding: 16px;
-        font-size: 18px;
+        padding: 18px;
+        font-size: 20px;
         text-align: center;
       }
       .modal .items {
         background: #fff;
-        padding: 30px 20px 20px;
+        padding: 32px 24px 24px;
+      }
+      .modal .item {
+        text-align: center;
       }
       .modal .item img {
-        width: 180px;
-        margin: 15px auto;
+        width: 160px;
+        margin: 0 auto 16px;
       }
       .modal .two {
-        font-size: 18px;
-        font-weight: 500;
+        font-size: 20px;
+        font-weight: 400;
+        color: #444;
         line-height: 1.4;
-        color: #333;
-        margin-bottom: 12px;
       }
       .modal .two span {
         display: block;
-        font-size: 24px;
+        font-size: 26px;
         font-weight: 700;
         color: #1e57a6;
         margin-top: 8px;
@@ -80,23 +83,23 @@
       .modal .stars {
         display: flex;
         justify-content: center;
-        margin: 12px 0 6px;
+        margin: 14px 0 8px;
       }
       .modal .stars img {
-        height: 22px;
-        margin: 0 3px;
+        height: 20px;
+        margin: 0 4px;
       }
       .modal .rating_pc {
         font-size: 16px;
         font-weight: bold;
-        color: #222;
+        color: #000;
       }
       .modal .btn {
         display: inline-block;
         background: #8dc63f;
         color: white;
         font-weight: bold;
-        padding: 14px 30px;
+        padding: 14px 34px;
         border-radius: 8px;
         font-size: 16px;
         text-decoration: none;
