--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -52,13 +52,14 @@
         background: #1e57a6;
         color: #fff;
         font-weight: 700;
-        padding: 18px;
+        padding: 35px;
         font-size: 20px;
         text-align: center;
       }
       .modal .items {
-        background: #fff;
+        background: transparent;
         padding: 32px 24px 24px;
+        justify-content: center;
       }
       .modal .item {
         text-align: center;
