--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -31,7 +31,7 @@
         background: #fff;
         border-radius: 12px;
         width: 100%;
-        max-width: 520px;
+        max-width: 600px;
         position: relative;
         text-align: center;
         overflow: hidden;
@@ -52,39 +52,46 @@
         background: #1e57a6;
         color: #fff;
         font-weight: 700;
-        padding: 35px;
-        font-size: 20px;
+        padding: 28px 20px;
+        font-size: 22px;
         text-align: center;
       }
       .modal .items {
-        background: transparent;
-        padding: 32px 24px 24px;
+        background: #fff;
+        padding: 40px;
+        display: flex;
         justify-content: center;
       }
       .modal .item {
         text-align: center;
+        padding: 20px;
+        background: #001f3f;
+        border-radius: 12px;
+        width: 100%;
+        max-width: 320px;
+        color: white;
       }
       .modal .item img {
-        width: 160px;
+        width: 200px;
         margin: 0 auto 16px;
       }
       .modal .two {
-        font-size: 20px;
+        font-size: 16px;
         font-weight: 400;
-        color: #444;
-        line-height: 1.4;
+        line-height: 1.5;
+        margin-top: 12px;
       }
       .modal .two span {
         display: block;
-        font-size: 26px;
+        font-size: 28px;
         font-weight: 700;
-        color: #1e57a6;
+        color: #8dc63f;
         margin-top: 8px;
       }
       .modal .stars {
         display: flex;
         justify-content: center;
-        margin: 14px 0 8px;
+        margin: 18px 0 10px;
       }
       .modal .stars img {
         height: 20px;
@@ -93,18 +100,18 @@
       .modal .rating_pc {
         font-size: 16px;
         font-weight: bold;
-        color: #000;
+        color: #8dc63f;
       }
       .modal .btn {
         display: inline-block;
         background: #8dc63f;
         color: white;
         font-weight: bold;
-        padding: 14px 34px;
-        border-radius: 8px;
+        padding: 14px 32px;
+        border-radius: 6px;
         font-size: 16px;
         text-decoration: none;
-        margin-top: 20px;
+        margin-top: 16px;
       }
     </style>
   </head>
