--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -63,20 +63,25 @@
         justify-content: center;
       }
       .modal .item {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         text-align: center;
         padding: 20px;
-        background: #001f3f;
+        background: transparent;
         border-radius: 12px;
         width: 100%;
         max-width: 320px;
         color: white;
       }
       .modal .item img {
-        width: 200px;
+        width: 220px;
         margin: 0 auto 16px;
       }
       .modal .two {
-        font-size: 16px;
+        font-size: 22px;
         font-weight: 400;
         line-height: 1.5;
         margin-top: 12px;
