--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -19,104 +19,99 @@
         position: fixed;
         top: 0;
         left: 0;
-        right: 0;
-        bottom: 0;
-        background: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(5px);
+        z-index: 999;
         display: flex;
         justify-content: center;
         align-items: center;
-        z-index: 1000;
-      }
-      .modal .content {
-        background: #fff;
-        border-radius: 12px;
-        width: 100%;
-        max-width: 600px;
-        position: relative;
-        text-align: center;
-        overflow: hidden;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
-      }
-      .modal .close {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        border: none;
-        background: none;
-        font-size: 24px;
-        color: #333;
-        cursor: pointer;
-        z-index: 10;
       }
       .modal .title {
+        font-size: 24px;
+        font-weight: 700;
+        text-transform: uppercase;
+        text-align: center;
         background: #1e57a6;
         color: #fff;
-        font-weight: 700;
         padding: 28px 20px;
-        font-size: 22px;
-        text-align: center;
+      }
+      .modal .content {
+        position: relative;
+        max-width: 700px;
+        width: 100%;
+        background: #fff;
+        border-radius: 12px;
+        overflow: hidden;
+      }
+      .modal .content .close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        font-size: 24px;
+        background: none;
+        border: none;
+        color: #333;
       }
       .modal .items {
-        background: #fff;
+        display: flex;
+        justify-content: center;
         padding: 40px;
-        display: flex;
-        justify-content: center;
       }
-      .modal .item {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+      .modal .items .item {
+        border-radius: 15px;
+        background: #033131;
+        padding: 21px 0;
         text-align: center;
-        padding: 20px;
-        background: transparent;
-        border-radius: 12px;
-        width: 100%;
-        max-width: 320px;
-        color: white;
+        color: #fff;
       }
-      .modal .item img {
-        width: 220px;
-        margin: 0 auto 16px;
+      .modal .items .item img {
+        max-width: 180px;
+        margin-bottom: 20px;
       }
-      .modal .two {
-        font-size: 22px;
+      .modal .items .item .two {
+        font-size: 16px;
         font-weight: 400;
-        line-height: 1.5;
-        margin-top: 12px;
+        text-align: center;
       }
-      .modal .two span {
-        display: block;
-        font-size: 28px;
+      .modal .items .item .two span {
+        color: #69FE00;
+        font-size: 36px;
         font-weight: 700;
-        color: #8dc63f;
+        display: block;
         margin-top: 8px;
       }
-      .modal .stars {
+      .modal .items .item .stars {
         display: flex;
         justify-content: center;
         margin: 18px 0 10px;
       }
-      .modal .stars img {
+      .modal .items .item .stars img {
         height: 20px;
         margin: 0 4px;
       }
-      .modal .rating_pc {
-        font-size: 16px;
-        font-weight: bold;
-        color: #8dc63f;
-      }
-      .modal .btn {
-        display: inline-block;
-        background: #8dc63f;
-        color: white;
-        font-weight: bold;
-        padding: 14px 32px;
-        border-radius: 6px;
-        font-size: 16px;
+      .modal .items .item .btn {
+        width: 170px;
+        height: 50px;
+        border-radius: 5px;
+        background: #69FE00;
+        box-shadow: 0px 5px 40px 0px rgba(105, 254, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #001212;
+        font-size: 18px;
+        font-weight: 600;
+        margin: 25px auto 0;
         text-decoration: none;
-        margin-top: 16px;
+      }
+      .modal .items .item .btn_btext {
+        margin-top: 14px;
+        text-align: center;
+        font-size: 12px;
+        font-weight: 400;
       }
     </style>
   </head>
