--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -62,7 +62,7 @@
       }
       .modal .items .item {
         border-radius: 15px;
-        background: #033131;
+        background: transparent;
         padding: 21px 0;
         text-align: center;
         color: #fff;
