--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -39,7 +39,7 @@
       }
       .modal .content {
         position: relative;
-        max-width: 700px;
+        max-width: 400px;
         width: 100%;
         background: #fff;
         border-radius: 12px;
@@ -77,7 +77,7 @@
         text-align: center;
       }
       .modal .items .item .two span {
-        color: #69FE00;
+        color: #285ca7;
         font-size: 36px;
         font-weight: 700;
         display: block;
