--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -41,7 +41,7 @@
         position: relative;
         max-width: 400px;
         width: 100%;
-        background: #fff;
+        background: #ffffff;
         border-radius: 12px;
         overflow: hidden;
       }
